--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <!DOCTYPE html>
 <html lang-"ru">
 <head>
-    <title>Привет мир</title>
+    <title>Моя презентация</title>
 </head>
 <body>
-    <hl>Привет мир</hl>
+
+    <p>
+        Нажмите,чтобы скачать или открыть презентацию:
+        <a href="СетьВводный.pptx">Презентация в форме .pptx</a>
+        Нажмите,чтобы скачать или открыть index.html:
+        <a href="index.html">Файл проверки работы с кириллицей .html</a>
+    </p>
+    
 </body>
 </html>
