--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
-<html lang-"ru">
+<html>
 <head>
-    <title>Моя презентация</title>
+  <title>Моя презентация</title>
 </head>
 <body>
 
-    <p>
-        Нажмите,чтобы скачать или открыть презентацию:
-        <a href="СетьВводный.pptx">Презентация в форме .pptx</a>
-        Нажмите,чтобы скачать или открыть index.html:
-        <a href="index.html">Файл проверки работы с кириллицей .html</a>
-    </p>
-    
+  <p>
+    Нажмите, чтобы скачать или открыть презентацию:
+    <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
+    Нажмите, чтобы скачать или открыть index.html:
+    <a href="index.html">Файл проверки работы с кириллицей .html</a>
+  </p>
+
 </body>
 </html>
