--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>Моя презентация</title>
 </head>
 <body>
+    <a href="krossvordRU.html">Русский кроссворд</a>
+    <a href="krossvordEN.html">Английский кроссворд</a>
 
   <p>
     Нажмите, чтобы скачать или открыть презентацию:
