--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Моя презентация</title>
+  <title>Мой блог</title>
 </head>
 <body>
-    <a href="krossvordRU.html">Русский кроссворд</a>
-    <a href="krossvordEN.html">Английский кроссворд</a>
-
-  <p>
-    Нажмите, чтобы скачать или открыть презентацию:
-    <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
-    Нажмите, чтобы скачать или открыть index.html:
-    <a href="index.html">Файл проверки работы с кириллицей .html</a>
-  </p>
-
+    
+<a target="_blank" href="https://icons8.com/icon/9HmtfBpOw8pu/new-year">Новый год</a> иконка от <a target="_blank" href="https://icons8.com">Icons8</a>
 </body>
 </html>
