--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -13,7 +13,8 @@
     <p>Для ценителей родного языка я подготовила русский кроссворд с тематическими словами: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка» и другие атрибуты новогоднего настроения.
 А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, подойдёт английский кроссворд, где вы встретите слова вроде snowflake, fireworks, gift и celebration.</p>
     <p>Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
- <a href=“Congratulations2026.html”> здесь.</a>
-
+ <a href=“krossvordEN.html”> здесь.</a>
+ <a href=“krossvordRU.html”> здесь.</a>
+ <a href=“index.html”> Назад.</a> 
 </body>
 </html>
