--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Мой блог</title>
   <link type=“text/css” rel=“stylesheet” href=“style.css” />
+  <link type=“text/css” rel=“stylesheet” href=“style.css” />
 </head>
 <body>
   <h2> 6 декабря , 2025</h2> 
