--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <title>Поздравление!</title>
-<link type=“text/css” rel=“stylesheet” href=“style.css” />
+<link type="text/css" rel="stylesheet" href="style.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
@@ -12,9 +12,9 @@
 Это время волшебства, тёплых встреч, мандаринов и исполнения самых заветных желаний. В ожидании праздника так приятно заняться чем-то увлекательным и полезным — например, разгадыванием кроссвордов.</p>
     <p>Для ценителей родного языка я подготовила русский кроссворд с тематическими словами: «Дед Мороз», «Снегурочка», «ёлка», «хлопушка» и другие атрибуты новогоднего настроения.
 А тем, кто хочет совместить праздничное настроение с практикой иностранного языка, подойдёт английский кроссворд, где вы встретите слова вроде snowflake, fireworks, gift и celebration.</p>
-    <p class=”quote”>Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
- <a href=“krossvordEN.html”> здесь.</a>
- <a href=“krossvordRU.html”> здесь.</a>
- <a href=“index.html”> Назад.</a> 
+    <p class="quote">Разгадывайте, угадывайте, улыбайтесь — и пусть Новый год принесёт вам радость, вдохновение и успехи в учёбе и работе!</p>
+ <a href="krossvordEN.html"> здесь.</a>
+ <a href="krossvordRU.html"> здесь.</a>
+ <a href="index.html"> Назад.</a> 
 </body>
 </html>
