--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
 
   <h2>6 декабря, 2025</h2>
-  <img src="Icons/имя_файла_вашей_картинки.png" alt="Новый год">
+  <img src="Icons/icons8-новый-год-96(1).png" alt="Новый год">
   <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь</a>.</p>
 
   <h2>15 октября, 2025</h2>
