--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
   <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h2>19 декабря, 2025</h2>
+  <p>Поздравляю с наступающим Рождеством 2026!</p>
+  
   <blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
-
+  <p>Поздравление с Наступающим 2026 годом читайте 
   <h2>6 декабря, 2025</h2>
   <img src="Icons/icons8-новый-год-96(1).png" alt="Новый год">
   <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь</a>.</p>
