--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body>
   <h2>19 декабря, 2025</h2>
-  <p>Поздравляю с наступающим Рождеством 2026!</p>
-  
+  <p>
+  Поздравляю с наступающим Рождеством 2026!
+  <a href="Kolyadka.odt">
+    Колядка
+  </a>
+  </p>
+  <video src="
   <blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
   <p>Поздравление с Наступающим 2026 годом читайте 
   <h2>6 декабря, 2025</h2>
