--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     Колядка
   </a>
   </p>
-  <video src="
+  <video src="019b35ab-fd28-7e14-a36f-76c3c506d222.mp4" controls width="640" height="360">
+    Your browser does not support the video tag.
+  <video/>
   <blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
   <p>Поздравление с Наступающим 2026 годом читайте 
   <h2>6 декабря, 2025</h2>
