--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мой блог</title>
-  <link type="text/css" rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>19 декабря, 2025</h2>
   <p>
-  Поздравляю с наступающим Рождеством 2026!
-  <a href="Kolyadka.odt">
-    Колядка
-  </a>
+    Поздравляю с наступающим Рождеством 2026!
+    <a href="Kolyadka.odt" download>Колядка</a>
   </p>
+
   <video src="019b35ab-fd28-7e14-a36f-76c3c506d222.mp4" controls width="640" height="360">
-  <video/>
+    Ваш браузер не поддерживает видео.
+  </video>
+
   <blockquote class="q">Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</blockquote>
-  <p>Поздравление с Наступающим 2026 годом читайте 
+
+  <!-- ❗ Удалён "висячий" <p> -->
   <h2>6 декабря, 2025</h2>
-  <img src="Icons/icons8-новый-год-96(1).png" alt="Новый год">
+  <img src="Icons/icons8-новый-год-96(1).png" alt="Новый год" width="96" height="96">
   <p>Поздравление с Наступающим 2026 годом читайте <a href="Congratulations2026.html">здесь</a>.</p>
 
   <h2>15 октября, 2025</h2>
