--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <h2>13 января, 2026</h2>
-  <h2>Домен - </h2>
+  <h2>Домен - DianaMochalovskaya(subdomain).(root domain)github(SLD).(root domain)io(TLD)</h2>
+   <p> <a href="mailto:dianamochalovskayandex.ru">Напишите мне</a>.</p>
   <h2>19 декабря, 2025</h2>
   <p>
     Поздравляю с наступающим Рождеством 2026!
