--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
   <h2>16 января, 2026</h2>
-  <h2>а.17</h2>
-  <h2>б.27</h2>
-  <h2>а.привет</h2>
-  <h2>б.весна</h2>
-  <h2>ЦШБКХШМЫУКЙ</h2>
+       <h2>a) 17 b) 27<h2>
+       <h2>a) привет b) весна<h2>
+         <h2>ЦШБКХШМЫУКЙ<h2>
   <h2>13 января, 2026</h2>
   <p> <a href="mailto:dianamochalovskayandex.ru">Напишите мне</a>.</p>
   <h2>Домен - DianaMochalovskaya(subdomain).(root domain)github(SLD).(root domain)io(TLD)</h2>
