--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h2>18 февраля, 2026</h2>
+ <p> Топ-3 предсказаний:
+pug: 89.09%
+Griffon Bruxellois: 9.61%
+Pekingese: 0.66%</p>
   <h2>21 января, 2026</h2>
     <p class="zz">Открытый ключ: (n, e)=(77,43)</p>
     <h2>Закрытый ключ: (n, d)=(77,7)</p>
