--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h2>24 февраля, 2026</h2>
+  <p>Вопрос пользователя: Сколько ждать мой заказ?
+Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
+Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.
+Чат-бот не справился с ответом на вопрос "Как оплатить заказ?"
+</p>
   <h2>18 февраля, 2026</h2>
  <p>Топ-3 предсказаний:
 pug: 89.09%
