--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <p>Вопрос пользователя: Сколько ждать мой заказ?
 Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
 Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.
-Чат-бот не справился с ответом на вопрос "Как оплатить заказ?"
+
+    Вопрос пользователя: Как оплатить заказ?
+Найден FAQ-вопрос: Как оплатить заказ? (sim=0.941)
+Ответ бот-FAQ: Оплатить товар можно через терминал
 </p>
   <h2>18 февраля, 2026</h2>
  <p>Топ-3 предсказаний:
