--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p>Вопрос пользователя: Сколько ждать мой заказ?
 Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
 Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.
-
+да, чат-бот справисся с ответом:
     Вопрос пользователя: Как оплатить заказ?
 Найден FAQ-вопрос: Как оплатить заказ? (sim=0.941)
 Ответ бот-FAQ: Оплатить товар можно через терминал
